# discord-parrot

./: Cargo.toml  README.md
src/: cache.rs  config.rs  embed.rs  error.rs  handler.rs  main.rs
src/commands/: dictionary.rs  join.rs  leave.rs  mod.rs
src/voice/: manager.rs  mod.rs  playback.rs
src/voice/voicevox/: audio.rs  client.rs  dictionary.rs  format.rs  mod.rs
