[package]
name = "discord-bot-new"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
dotenvy = "0.15.7"
regex = "1.11.1"
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.143"
serenity = { version = "0.12.4", features = ["full"] }
songbird = { version = "0.5.0", features = ["builtin-queue"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
symphonia = { version = "0.5.4", features = ["wav"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = { version = "2.5.6" }
uuid = { version = "1.18.0", features = ["v4"] }
bytes = "1.10.1"
once_cell = "1.21.3"